Add button white text to global stylesheet.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,6 +16,7 @@ button {
   background-color: black;
   padding: 12px 32px;
   font-family: 'Roboto Mono', monospace;
+  color: white;
 
   &:hover {
     cursor: pointer;
