Added mobile styles for banner.

--- a/src/styles/tng.scss
+++ b/src/styles/tng.scss
@@ -13,7 +13,11 @@ $steel-blue: rgb(65,106,187);
 $white: rgb(237,237,254);
 
 $padding: 20px;
-$banner-height: 120px;
 $overhang-height: $padding;
+$banner-height: 120px;
 $overhang-width: 120px;
 $banner-radius: 50px;
+
+$banner-height-sm: 80px;
+$overhang-width-sm: 10px;
+$banner-radius-sm: 30px;
