Added block component. Added color classes.

--- a/src/styles/tng.scss
+++ b/src/styles/tng.scss
@@ -12,6 +12,15 @@ $cornflower-blue: rgb(80,157,235);
 $steel-blue: rgb(65,106,187);
 $white: rgb(237,237,254);
 
+.tng-orange { background-color: $orange; }
+.tng-red { background-color: $india-red; }
+.tng-plum { background-color: $plum; }
+.tng-portage {  background-color: $portage; }
+.tng-light-blue { background-color: $light-blue; }
+.tng-cornflower-blue { background-color: $cornflower-blue; }
+.tng-steel-blue { background-color: $steel-blue; }
+.tng-white { background-color: $white; }
+
 $padding: 20px;
 $overhang-height: $padding;
 $banner-height: 120px;
