Add side nav buttons to demo page.

--- a/src/styles/tng.scss
+++ b/src/styles/tng.scss
@@ -22,6 +22,7 @@ $white: rgb(237,237,254);
 .tng-white { background-color: $white; }
 
 $padding: 20px;
+$small-gap: 4px;
 $overhang-height: $padding;
 $banner-height: 120px;
 $overhang-width: 120px;
