Add text color config.

--- a/src/styles/tng.scss
+++ b/src/styles/tng.scss
@@ -21,6 +21,15 @@ $white: rgb(237,237,254);
 .tng-steel-blue { background-color: $steel-blue; }
 .tng-white { background-color: $white; }
 
+.tng-text-orange { color: $orange; }
+.tng-text-red { color: $india-red; }
+.tng-text-plum { color: $plum; }
+.tng-text-portage {  color: $portage; }
+.tng-text-light-blue { color: $light-blue; }
+.tng-text-cornflower-blue { color: $cornflower-blue; }
+.tng-text-steel-blue { color: $steel-blue; }
+.tng-text-white { color: $white; }
+
 $padding: 20px;
 $gap: 4px;
 $overhang-height: $padding;
