--- a/src/styles/tng.scss
+++ b/src/styles/tng.scss
@@ -45,3 +45,18 @@ $white: rgb(237,237,254);
 
 $padding: 20px;
 $gap: 4px;
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  border-radius: 20px;
+  background-color: $white;
+}
+::-webkit-scrollbar {
+  width: 12px;
+  background-color: black;
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 20px;
+  background-color: $orange;
+}
