fix: fixed padding where margins were collapsing on each other at bottom of page for peom lines

--- a/src/styles/poem.scss
+++ b/src/styles/poem.scss
@@ -28,6 +28,11 @@ $inner-radius: 10px;
   }
 }
 
+p {
+  margin: 0;
+  padding: 0 0.75rem 1rem 0.75rem;
+}
+
 .poem-container {
   min-height: calc(100vh - 99px);
   border-radius: $inner-radius;
